[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/loot_spr_4.png" type="Texture" id=1]
[ext_resource path="res://sprites/loot_spr_5.png" type="Texture" id=2]
[ext_resource path="res://sprites/loot_spr_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/loot_spr_3.png" type="Texture" id=4]
[ext_resource path="res://sprites/loot_spr_2.png" type="Texture" id=5]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/upgrade_life.png" type="Texture" id=7]
[ext_resource path="res://sprites/upgrade_dmg.png" type="Texture" id=8]
[ext_resource path="res://sprites/upgrade_speed.png" type="Texture" id=9]
[ext_resource path="res://scenes/LevelUp.gd" type="Script" id=10]
[ext_resource path="res://sprites/hourglass.png" type="Texture" id=11]
[ext_resource path="res://sprites/hourglass_2.png" type="Texture" id=12]
[ext_resource path="res://sprites/legacy/small_gem_0.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[node name="LevelUp" type="Node2D"]
script = ExtResource( 10 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 380.0
margin_top = 178.0
margin_right = 657.0
margin_bottom = 557.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 381.0
margin_top = 179.0
margin_right = 656.0
margin_bottom = 555.0
color = Color( 0, 0, 0, 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 513, 197 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 406.0
margin_top = 241.0
margin_right = 630.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
text = "SELECT
BLESSING"
align = 1
valign = 1

[node name="bless_description" type="Label" parent="."]
margin_left = 390.0
margin_top = 362.0
margin_right = 652.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="btn_dmg" type="Button" parent="."]
margin_left = 389.0
margin_top = 317.0
margin_right = 427.0
margin_bottom = 353.0
icon = ExtResource( 8 )
flat = true
icon_align = 1

[node name="btn_life" type="Button" parent="."]
margin_left = 434.0
margin_top = 317.0
margin_right = 471.0
margin_bottom = 353.0
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="btn_speed" type="Button" parent="."]
margin_left = 477.0
margin_top = 317.0
margin_right = 514.0
margin_bottom = 353.0
icon = ExtResource( 9 )
flat = true
icon_align = 1

[node name="btn_melee_speed" type="Button" parent="."]
margin_left = 523.0
margin_top = 317.0
margin_right = 558.0
margin_bottom = 353.0
icon = ExtResource( 11 )
flat = true
icon_align = 1

[node name="btn_shoot_speed" type="Button" parent="."]
margin_left = 565.0
margin_top = 317.0
margin_right = 601.0
margin_bottom = 353.0
icon = ExtResource( 12 )
flat = true
icon_align = 1

[node name="btn_gems" type="Button" parent="."]
margin_left = 606.0
margin_top = 317.0
margin_right = 650.0
margin_bottom = 353.0
icon = ExtResource( 13 )
flat = true
icon_align = 1

[node name="btn_OK" type="Button" parent="."]
margin_left = 420.0
margin_top = 506.0
margin_right = 624.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 7 )
text = "Accept Bless"
icon_align = 1

[connection signal="pressed" from="btn_dmg" to="." method="_on_btn_dmg_pressed"]
[connection signal="pressed" from="btn_life" to="." method="_on_btn_life_pressed"]
[connection signal="pressed" from="btn_speed" to="." method="_on_btn_speed_pressed"]
[connection signal="pressed" from="btn_melee_speed" to="." method="_on_btn_melee_speed_pressed"]
[connection signal="pressed" from="btn_shoot_speed" to="." method="_on_btn_shoot_speed_pressed"]
[connection signal="pressed" from="btn_gems" to="." method="_on_btn_gems_pressed"]
[connection signal="pressed" from="btn_OK" to="." method="_on_btn_OK_pressed"]
